syntax = "proto3";

package network.pb;

message GroupConnectInit {
    string group_id = 1;
    uint64 boot_ts = 2;
    uint64 conn_times = 3;
}

message GroupConnectMaintain {
    enum Type {
        Heartbeat = 0;
        ConnectChange = 1;
    }

    Type    type = 1;
    bytes   payload = 2;
    uint64  conn_times = 3;
}